refactor(error): renamed ApplicationError
